--- a/Web/Views/Claim/Edit2.cshtml
+++ b/Web/Views/Claim/Edit2.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Probléme résolu?</h2>
 
-    <h4> Information reclamation</h4>
+    <h4> Information sur le reclamation</h4>
     <style>
         .input {
             border-style: none;
@@ -110,6 +110,4 @@
         </div>
     }
 
-    @*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
+   
