--- a/Web/Views/Shared/_Back.cshtml
+++ b/Web/Views/Shared/_Back.cshtml
@@ -213,14 +213,13 @@
                         <li class=" ">
                             <a href="#elements" title="Elements"
                                data-toggle="collapse">
-                                <em class="icon-chemistry"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Foramtions</span>
+                                <em class="icon-note"></em> <span data-localize="sidebar.nav.element.ELEMENTS">Gestion Evaluation</span>
                             </a>
                             <ul class="sidebar-nav sidebar-subnav collapse" id="elements">
                                 <li class="sidebar-subnav-header">Elements</li>
                                 <li class=" ">
-
-                                    <a href="/FormationEnLigne/Index" title="Buttons">
-                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des employes</span>
+                                    <a href="/Evaluation/Index" title="Buttons">
+                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des Evaluations</span>
                                     </a>
                                 </li>
 
@@ -229,13 +228,16 @@
                         <li class=" ">
                             <a href="#elements" title="Elements"
                                data-toggle="collapse">
-                                <em class="icon-chemistry"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Formateur</span>
+                                <em class="icon-note"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Reclamation User</span>
                             </a>
                             <ul class="sidebar-nav sidebar-subnav collapse" id="elements">
                                 <li class="sidebar-subnav-header">Elements</li>
                                 <li class=" ">
-                                    <a href="/Formateur/Index" title="Buttons">
-                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des formateur</span>
+                                    <a href="/claim/Index" title="Buttons">
+                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des Reclamations</span>
+                                        <a href="/claim/Create" title="Buttons">
+                                            <span data-localize="sidebar.nav.element.BUTTON">Ajout Reclamation</span>
+                                        </a>
                                     </a>
                                 </li>
 
@@ -244,50 +246,22 @@
                         <li class=" ">
                             <a href="#elements" title="Elements"
                                data-toggle="collapse">
-                                <em class="icon-chemistry"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Qcm</span>
+                                <em class="icon-note"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Reclamation Manager</span>
                             </a>
                             <ul class="sidebar-nav sidebar-subnav collapse" id="elements">
                                 <li class="sidebar-subnav-header">Elements</li>
                                 <li class=" ">
-                                    <a href="/Qsm/Index" title="Buttons">
-                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des qcm</span>
+                                    <a href="/ClaimManager/Index" title="Buttons">
+                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des Reclamations </span>
                                     </a>
+                                    
+                                    
                                 </li>
 
                             </ul>
                         </li>
-                        <li class=" ">
-                            <a href="#elements" title="Elements"
-                               data-toggle="collapse">
-                                <em class="icon-chemistry"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Participation</span>
-                            </a>
-                            <ul class="sidebar-nav sidebar-subnav collapse" id="elements">
-                                <li class="sidebar-subnav-header">Elements</li>
-                                <li class=" ">
-                                    <a href="/Participation/Index" title="Buttons">
-                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des participons</span>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li class=" ">
-                            <a href="#elements" title="Elements"
-                               data-toggle="collapse">
-                                <em class="icon-chemistry"></em><span data-localize="sidebar.nav.element.ELEMENTS">Gestion Cours</span>
-                            </a>
-                            <ul class="sidebar-nav sidebar-subnav collapse" id="elements">
-                                <li class="sidebar-subnav-header">Elements</li>
-                                <li class=" ">
-                                    <a href="/Cours/Index" title="Buttons">
-                                        <span data-localize="sidebar.nav.element.BUTTON">Liste des cours</span>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-
-
+                       
+                       
 
 
 
