--- a/Web/Views/ClaimManager/Delete.cshtml
+++ b/Web/Views/ClaimManager/Delete.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_Back.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer Une Réclamation</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûr de supprimer cette Reclamation ??</h3>
 <div>
-    <h4>reclamation</h4>
+
     <hr />
     <dl class="dl-horizontal">
         @*<dt>
@@ -44,13 +44,13 @@
             @Html.DisplayFor(model => model.descp)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.fich)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.fich)
-        </dd>
+        </dd>*@
         <dt>
             @Html.DisplayNameFor(model => model.reponse)
         </dt>
@@ -87,9 +87,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Supprimer le reclamation " class="btn btn-danger" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Supprimer le reclamation " class="btn btn-danger" /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="~/ClaimManager/Index"> <input type="button" value="Retour" class="btn btn-dark" /></a>
+                   @*@Html.ActionLink("Back to List", "Index")*@
+    </div>
     }
 </div>
