--- a/Web/Views/ClaimManager/Edit.cshtml
+++ b/Web/Views/ClaimManager/Edit.cshtml
@@ -2,41 +2,26 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_myLayout.cshtml";
+    Layout = "~/Views/Shared/_Back.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Resolu une reclamation</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>reclamation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ReclmationID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.user_id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.user_id, new { htmlAttributes = new { @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.user_id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.evaluation_id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.evaluation_id, new { htmlAttributes = new { @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.evaluation_id, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
 
         <div class="form-group">
             @Html.LabelFor(model => model.titreclaim, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.titreclaim, new { htmlAttributes = new { @readonly = "readonly" } })
+                @Html.EditorFor(model => model.titreclaim, new { htmlAttributes = new { @readonly = "readonly", @class = "TextBoxAsLabel" } })
                 @Html.ValidationMessageFor(model => model.titreclaim, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,42 +29,22 @@
         <div class="form-group">
             @Html.LabelFor(model => model.descp, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.descp, new { htmlAttributes = new { @readonly = "readonly" } })
+                @Html.EditorFor(model => model.descp, new { htmlAttributes = new { @readonly = "readonly", @class = "TextBoxAsLabel" } })
                 @Html.ValidationMessageFor(model => model.descp, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.fich, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.fich, new { htmlAttributes = new { @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.fich, "", new { @class = "text-danger" })
-            </div>
-        </div>
+      
 
         <div class="form-group">
             @Html.LabelFor(model => model.comment, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.comment, new { htmlAttributes = new { @readonly = "readonly" } })
+                @Html.EditorFor(model => model.comment, new { htmlAttributes = new { @readonly = "readonly", @class = "TextBoxAsLabel" } })
                 @Html.ValidationMessageFor(model => model.comment, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.dateclose, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dateclose, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dateclose, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.dateopen, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dateopen, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dateopen, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+      
 
         <div class="form-group">
             @Html.LabelFor(model => model.reponse, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -91,12 +56,9 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Resolu la reclamation " class="btn btn-success" /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="~/ClaimManager/Index"><input type="button" value="Retour" class="btn btn-dark"/></a>
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
