--- a/Web/Views/Evaluation/Index.cshtml
+++ b/Web/Views/Evaluation/Index.cshtml
@@ -2,15 +2,15 @@
 
 @{
     ViewBag.Title = "ListeEvaluation";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Back.cshtml";
 }
 
-<h2>Index</h2>
+<img src="~/Content/img/icon/list.png" />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<h2>Liste des Evaluations </h2>
+<br />
+<br />
+<table class="table table-bordered table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.DATE_EVAL)
@@ -33,10 +33,8 @@
         <th>
             @Html.DisplayNameFor(model => model.score_team)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.user_id)
-        </th>
-        <th></th>
+       
+        
     </tr>
 
 @foreach (var item in ViewBag.result) {
@@ -63,14 +61,8 @@
         <td>
             @item.score_team
         </td>
-        <td>
-            @item.user_id
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
+       
+        
     </tr>
 }
 
